# excel_agent

./: .env.example  .gitignore  AGENT_RESPONSE_UPGRADE.md  ENCODING_FIX_README.md  FINAL_SUMMARY.md  FRONTEND_README.md  MCP_INTEGRATION_README.md  PROJECT_STRUCTURE.md  README.md  README_CN.md  RELEVANCE_MATCHING_README.md  TEXT_ANALYSIS_README.md  TODO.md  example_st_raptor_usage.py  frontend_requirements.txt  logging_config.py  pyproject.toml  requirements.txt  run_frontend.py  test_basic.py  test_data.xlsx  test_mcp_integration.py  test_mcp_standalone.py  validate_system.py
backend/: app.py
backend/file_storage/: file_metadata.json
backend/file_storage/9b279bc5-f901-49f5-89d2-8c0a3d69f0a4/: data_backup_20250911_010146.xlsx
backend/templates/: chat.html  index.html
backend/utils/: __init__.py  excel_to_html.py  file_manager.py  html_converter.py  markdown_converter.py  progress_tracker.py  relevance_matcher.py  smart_scope_reducer.py  text_processor.py
data/synthetic/: complex_structure.xlsx  generate_test_data.py  multi_table_business.xlsx  single_table_sales.xlsx
excel_intelligence_agent/: .env.example  README.md  demo_enhanced_analysis.py  pyproject.toml  run_agent.py  test_siliconflow_integration.py
excel_intelligence_agent/deployment/: config.yaml  deploy.py
excel_intelligence_agent/excel_intelligence_agent/: __init__.py  agent.py  prompts.py  tools.py
excel_intelligence_agent/excel_intelligence_agent/shared_libraries/: __init__.py  constants.py  embedding_engine.py  model_adapter.py  multimodal_extractor.py  siliconflow_client.py  tree_partitioner.py  types.py  utils.py
excel_intelligence_agent/excel_intelligence_agent/sub_agents/: __init__.py
excel_intelligence_agent/excel_intelligence_agent/sub_agents/column_profiler/: __init__.py  agent.py  tools.py
excel_intelligence_agent/excel_intelligence_agent/sub_agents/file_analyzer/: __init__.py  agent.py  tools.py
excel_intelligence_agent/excel_intelligence_agent/sub_agents/relation_discoverer/: __init__.py  agent.py  tools.py
excel_intelligence_agent/excel_intelligence_agent/sub_agents/response_synthesizer/: __init__.py  agent.py
frontend/: index.html
src/excel_agent/: __init__.py
src/excel_agent/agents/: __init__.py  base.py  code_generation.py  column_profiling.py  embedding_agent.py  execution.py  (+12 more)
tests/: README.md
tests/archived/: simple_test_legacy.py
tests/integration/: test_basic_integration_fixed.py  test_detailed_logs.py  test_preview.py
tests/mcp/: test_mcp_simple.py
tests/unit/: test_column_profiling_agent.py  test_file_ingest_agent.py
tools/: README.md  test_api_encoding.py  test_encoding.py  test_relevance_matcher.py  test_text_analysis.py
tools/debug/: debug_query.py
tools/examples/: example_usage.py
(+23 files in other folders)
